--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "preboot": "node preboot.js",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
